[project]
name = "analysis-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
analysis = [
    "ipykernel>=7.1.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
]
